# sniper

./: .gitignore  AGENTS.md  PROJECT_STRUCTURE.md  docker-compose.yml  docker-compose_old.yml  ml_engine_log.txt  phase2_diagnostic.py  phase3_diagnostic.py  pyproject.toml  requirements.txt
codex_tmp/: SNIPER_unlock_pressure_rank_especificacao_final_rev5.txt  SNIPER_v10_10_Especificacao_Definitiva.txt
codex_tmp/20260308_phase23_pre_promote/: cluster_map.json  vi_matrix.csv
codex_tmp/phase23_models/: cluster_map.json  vi_matrix.csv
docs/: SNIPER_AUTONOMOUS_OPERATING_CONTRACT.md  SNIPER_Fase4_dossie_continuidade.docx  SNIPER_checklist_operacional_consolidado.docx  SNIPER_memoria_especificacao_controle_fase4R_v3.md  SNIPER_memoria_mestra_chat_atualizada_v5.docx  SNIPER_openclaw_handoff.md  SNIPER_regeneration_guide.md  SNIPER_unlock_pressure_rank_especificacao_final_rev5.docx  SNIPER_v10_10_Especificacao_Definitiva.docx  relatorio_integracao_sniper_risklabai.docx  runbook_nautilus_bridge_paper.md  unlock_pressure_rank_technical.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
infra/docker/: test_runner.Dockerfile
infra/nginx/: nginx.conf
reports/state/: sniper_artifact_registry.json  sniper_autonomous_runbook.md  sniper_current_state.json  sniper_decision_ledger.md  sniper_hypothesis_inventory.md  sniper_next_autonomous_mission.md  sniper_research_agenda.yaml  sniper_spec_gap_backlog.yaml
scripts/: bootstrap.sh
services/api/: Dockerfile  main.py  requirements.txt
services/common/: __init__.py  gate_reports.py
services/data_inserter/: Dockerfile  bootstrap_historical.py  bootstrap_phase2_inputs.py  main.py  requirements.txt
services/execution_engine/: Dockerfile  main.py  requirements.txt
services/ml_engine/: Dockerfile  codex_phase23_rerun.py  main.py  phase2_diagnostic.py  phase3_diagnostic.py  phase4_alignment_meta_audit.py  phase4_cpcv.py  phase4_cross_sectional_closure_gate.py  phase4_cross_sectional_decision_space_latest_eval.py  phase4_cross_sectional_latest_choke_audit.py  phase4_cross_sectional_no_contest_vs_ranking_failure.py  phase4_cross_sectional_ranking_baseline.py  phase4_gate_diagnostic.py  phase4_meta_upstream_remediation.py  phase4_stage_a_experiment.py  phase5_cross_sectional_hardening_baseline.py  phase5_cross_sectional_latest_headroom_reconciliation_audit.py  phase5_cross_sectional_operational_fragility_audit_and_bounded_correction.py  phase5_cross_sectional_recent_regime_policy_falsification.py  phase5_cross_sectional_sovereign_closure_bundle_restore_and_revalidate.py  phase5_cross_sectional_sovereign_hardening_recheck.py  phase5_post_candidate_falsification_global_reaudit.py  phase5_post_candidate_falsification_governed_freeze.py  phase5_research_alternative_exante_family.py  phase5_research_candidate_decision.py  phase5_research_candidate_falsification.py  phase5_research_candidate_global_reaudit.py  phase5_research_candidate_stability.py  phase5_research_candidate_validation.py  phase5_research_cluster_conditioned_polarity.py  phase5_research_cluster_conditioned_polarity_decision.py  phase5_research_cluster_conditioned_polarity_falsification.py  phase5_research_cvar_constrained_meta_sizing.py  phase5_research_deep_quant_diagnostic.py  phase5_research_dsr_zero_diagnostic.py  phase5_research_feature_family_ablation_blocker_decomposition.py  phase5_research_full_phase_family_comparison.py  phase5_research_hypothesis_space_freeze_gate.py  phase5_research_meta_disagreement_abstention.py  phase5_research_meta_disagreement_candidate_decision.py  (+16 more)
services/nautilus_bridge/: Dockerfile  __init__.py  acceptance.py  config.py  consumer.py  contract.py  instrument_map.json  main.py  mock_publisher.py  phase4_publisher.py  reconciler.py  requirements.txt  run_phase4_paper_daemon.py  run_phase4_paper_once.py  signal.schema.json  state.py  status.py  strategy.py
tests/: _path_setup.py  conftest.py
tests/integration/: test_unlock_pipeline_e2e.py
tests/unit/: test_baseline_core_ablation.py  test_collectors_runtime.py  test_gate_reports.py  test_hmm_regime_alignment.py  test_nautilus_bridge_acceptance.py  test_nautilus_bridge_consumer.py  test_nautilus_bridge_contract.py  test_nautilus_bridge_phase4_paper_daemon.py  test_nautilus_bridge_phase4_paper_once.py  test_nautilus_bridge_phase4_publisher.py  test_nautilus_bridge_reconciler.py  test_nautilus_bridge_run_phase4_paper_once.py  test_path_setup_bootstrap.py  test_phase3_diagnostic.py  test_phase4_alignment_meta_audit.py  test_phase4_cross_sectional_closure_gate.py  test_phase4_cross_sectional_decision_space_latest_eval.py  test_phase4_cross_sectional_latest_choke_audit.py  test_phase4_cross_sectional_no_contest_vs_ranking_failure.py  test_phase4_cross_sectional_ranking_baseline.py  test_phase4_gate_diagnostic.py  (+40 more)
(+341 files in other folders)
