[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sniper-ml-engine"
version = "10.10.0"
description = "SNIPER v10.10 — Quantitative Crypto Trading System"
requires-python = ">=3.11"
license = {text = "Proprietary"}

# =============================================================================
# DEPENDENCY PHILOSOPHY:
# - Pin MAJOR.MINOR for reproducibility in production
# - Use float32 + chunked processing to avoid OOM on 5-year OHLCV datasets
# - Polars for vectorized data pipelines; Pandas kept for sklearn compatibility
# =============================================================================

dependencies = [
    # ── Data Processing ───────────────────────────────────────────────────
    "polars>=0.20.0,<1.0",           # Rust-backed DataFrame: 5-10x faster than Pandas on parquet
    "pandas>=2.1.0,<3.0",            # sklearn/statsmodels compatibility layer
    "numpy>=1.26.0,<2.0",            # float32 arrays; DO NOT upgrade to 2.x without testing
    "pyarrow>=14.0.0,<16.0",         # parquet engine used by both Polars and Pandas
    "fastparquet>=2023.10.1",        # alternative parquet engine for append operations

    # ── Statistical & ML ─────────────────────────────────────────────────
    "scikit-learn>=1.4.0,<2.0",      # IsotonicRegression, RobustScaler, PCA, RF, KBinsDiscretizer
    "lightgbm>=4.3.0,<5.0",          # LGBM: primary + meta model (SHAP-compatible)
    "hmmlearn>=0.3.0,<0.4",          # GaussianHMM for regime detection
    "statsmodels>=0.14.0,<1.0",      # adfuller ADF test for FracDiff stationarity check
    "scipy>=1.12.0,<2.0",            # norm.cdf, ks_2samp, binomtest, linkage, fcluster
    "joblib>=1.3.0",                 # parallel jobs + model serialization

    # ── Time Series & Finance ─────────────────────────────────────────────
    "arch>=6.3.0,<7.0",              # GARCH models (future extension)

    # ── API Exchange ─────────────────────────────────────────────────────
    "python-binance>=1.0.19",        # Binance REST + WebSocket client
    "aiohttp>=3.9.0,<4.0",           # async HTTP for CoinGecko, Deribit
    "tenacity>=8.2.3",               # retry logic with exponential backoff

    # ── Backend API ───────────────────────────────────────────────────────
    "fastapi>=0.110.0,<1.0",         # async REST API
    "uvicorn[standard]>=0.27.0",     # ASGI server (uvloop + httptools)
    "httpx>=0.27.0",                 # async HTTP client for internal service calls
    "redis>=5.0.0,<6.0",             # async Redis client (signals queue + pub/sub)
    "websockets>=12.0",              # WebSocket for real-time dashboard push

    # ── Storage & Serialization ───────────────────────────────────────────
    "aiosqlite>=0.20.0",             # async SQLite access
    "sqlalchemy>=2.0.0,<3.0",        # ORM layer (swap to PostgreSQL by changing URL)
    "alembic>=1.13.0",               # DB migrations

    # ── Configuration & Security ──────────────────────────────────────────
    "python-decouple>=3.8",          # .env parsing — NEVER hardcode credentials
    "cryptography>=42.0.0",          # key handling

    # ── Notifications ─────────────────────────────────────────────────────
    "python-telegram-bot>=21.0",     # Telegram alerts (async)
    "aiosmtplib>=3.0.0",             # async email (halt + daily reports)

    # ── Scheduling ────────────────────────────────────────────────────────
    "apscheduler>=3.10.0,<4.0",      # cron-style job scheduling inside container

    # ── Observability ─────────────────────────────────────────────────────
    "structlog>=24.1.0",             # structured JSON logging (cloud-native)
    "prometheus-client>=0.20.0",     # metrics endpoint for Grafana

    # ── Visualization (backtest reports) ──────────────────────────────────
    "matplotlib>=3.8.0",             # static plots for diagnostics
    "seaborn>=0.13.0",               # VI heatmap
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",           # property-based testing for math functions
    "ruff>=0.3.0",                   # fast linter + formatter
    "mypy>=1.9.0",                   # type checking
    "ipykernel>=6.29.0",             # Jupyter for exploratory analysis
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools.packages.find]
where = ["."]
